feat: change components angular v15

--- a/src/app/country/components/table-country/table-country.component.html
+++ b/src/app/country/components/table-country/table-country.component.html
@@ -16,7 +16,7 @@
             <th>{{country.capital}}, {{country.name}}</th>
             <th>{{country.population | number}}</th>
             <th>
-                <a [routerLink]="['pais', country.alpha2Code]">Ver...</a>
+                <span (click)="showCountry(country.alpha2Code)" class="span-link">Ver...</span>
             </th>
         </tr>
     </tbody>
