--- a/src/app/country/pages/by-capital/by-capital.component.html
+++ b/src/app/country/pages/by-capital/by-capital.component.html
@@ -3,11 +3,7 @@
 
 <div class="row">
     <div class="col">
-        <app-search-country
-            (onEnter)="buscar($event)"
-            placeholder="Buscar por capital..."
-        >
-        </app-search-country>
+        <app-search-country (onEnter)="buscar($event)" placeholder="Buscar por capital..." />
     </div>
 </div>
 <hr>
@@ -18,9 +14,6 @@
 
 <div class="row">
     <div class="col">
-        <app-table-country
-            *ngIf="countries.length > 0"
-            [countries]="countries"
-        ></app-table-country>
+        <app-table-country *ngIf="countries.length > 0" [countries]="countries" />
     </div>
 </div>
