--- a/src/app/country/pages/by-capital/by-capital.component.html
+++ b/src/app/country/pages/by-capital/by-capital.component.html
@@ -1,12 +1,14 @@
-<h2>Por Capital</h2>
-<hr>
-
-<div class="row">
-    <div class="col">
-        <app-search-country (onEnter)="buscar($event)" placeholder="Buscar por capital..." />
+<div class="animate__animated animate__fadeIn animate__faster">
+    <h2>Por Capital</h2>
+    <hr>
+    
+    <div class="row">
+        <div class="col">
+            <app-search-country (onEnter)="buscar($event)" placeholder="Buscar por capital..." />
+        </div>
     </div>
+    <hr>
 </div>
-<hr>
 
 <div *ngIf="error" class="alert alert-danger">
     No se encontro nada con la capital {{termino}}
