--- a/src/app/country/pages/by-region/by-region.component.html
+++ b/src/app/country/pages/by-region/by-region.component.html
@@ -1,17 +1,19 @@
-<h3>Buscar por region <small>{{ regionActiva | titlecase }}</small></h3>
-<hr>
-
-<h5>Seleccionar la region</h5>
-
-<div class="row">
-    <div class="col">
-        <button 
-            [class]="(region === regionActiva) ? 'btn btn-info mr-1' : 'btn btn-outline-info mr-1'" 
-            *ngFor="let region of regiones"
-            (click)="obtenerPaisesPorRegion(region)"
-        >
-            {{ region | titlecase }}
-        </button>
+<div class="animate__animated animate__fadeIn animate__faster">
+    <h3>Buscar por region <small>{{ regionActiva | titlecase }}</small></h3>
+    <hr>
+    
+    <h5>Seleccionar la region</h5>
+    
+    <div class="row">
+        <div class="col">
+            <button 
+                [class]="(region === regionActiva) ? 'btn btn-info mr-1' : 'btn btn-outline-info mr-1'" 
+                *ngFor="let region of regiones"
+                (click)="obtenerPaisesPorRegion(region)"
+            >
+                {{ region | titlecase }}
+            </button>
+        </div>
     </div>
 </div>
 <hr />
